--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
-    <string name="app_name">Aerobico Fit</string>
+    <string name="app_name">Aerobic Fit</string>
     <string name="next"><![CDATA[>]]></string>
+    <string name="start">start</string>
+    <string name="go_to_timer">Go to workout <![CDATA[>]]></string>
+    <string name="pause">Pause</string>
+    <string name="resume">Resume</string>
+    <string name="end_sets">Congratulations you have finished these sets!</string>
+    <string name="rest">Rest</string>
+    <string name="set">Set</string>
+    <string name="set_delimiter">of</string>
 </resources>
